src/style/global.css
/* ... */
@media (max-width: 768px) {

    section .ipu {
      align-items: flex-start;
    }

    section.hero img {
      max-width: 100vw;
      position: relative;
    }

    .img-hero-home {
      padding-top: 2rem;
    }

    section .ipu, .inner-div {
      flex-direction: column;
    }

    .logos {
      flex-wrap: wrap;
    }

    .logos img, .logo-carousel img {
      max-width: 45%;
    }

    .wrap-two, .wrap-four {
      flex-direction: column;
    }

    .wrap-two > *, .wrap-three > *, .wrap-four > * {
      width: 100%;
    }

    .approach {
      margin: 1rem auto;
      width: max-content !important;
    }

    .step {
      position: relative;
      margin-bottom: 2.5rem;
      margin-left: 0;
      left: unset;
      top: unset;
      right: unset;
      transform: unset;
    }

    .step-one:before {
      display: none;
    }

    .step-two:before, .step-four:before {
      left: 55%;
      top: -8%;
      rotate:70deg;
    }

    .step-three:before, .step-five:before {
      left: 15%;
      top: -8%;
      rotate: 120deg;
      transform: scaleY(-1);
      -webkit-transform: scaleY(-1);
    }

    .step-content img {
      width: 60px;
      height: 60px;
    }

}

@media (max-width: 364px) {

    .flex-wrap-mob {
      flex-wrap: wrap;
    }

}

.logo-carousel {
  display: flex;
  flex-wrap: wrap;
}
.logo-carousel__item {
  align-self: center;
  height: 150px;
  flex-basis: 50%;
  text-align: center;
}
@media all and (min-width: 450px) {
    .logo-carousel__item {
      flex-basis: 33%;
    }
}
@media all and (min-width: 900px) {
    .logo-carousel__item {
      flex-basis: 20%;
    }
}


 /* Desktop layout */
 @media (min-width: 1024px) {
    .blog-container {
      max-width: var(--container-width);
      margin-left: auto;
      margin-right: auto;
      grid-template-columns: 1fr 3fr;
      grid-template-areas: "toc post-body";
    }

    .toc-sticky {
      position: sticky;
      top: 1rem;
      max-height: 100vh;
      overflow-y: auto;
      overscroll-behavior: contain;
    }
}

.featured-blogs .ipu {
  flex-direction: column;
}

.articles-grid {
  display: grid;
  gap: 1.5rem;
  grid-template-columns: 1fr;
}

ul.toc-children {
  margin-top: 1rem;
}

@media (min-width: 768px) {
    .articles-grid {
      grid-template-columns: repeat(3, 1fr);
    }
}

.left-right a {
  text-decoration: underline;
}

.left-right a.btnPrimary {
  text-decoration: none;
}

.podcast-icons {
  display: flex;
  gap: 1rem;
  align-items: center;
}

.podcast-icons a {
  display: flex;
  align-items: center;
}

.podcast-icons svg {
  width:  60px !important;
  height: 60px !important;
}

.video-container {
  width: 100%;
  height: 100%;
  aspect-ratio: 16 / 9;
  max-width: 800px;
  margin: 0 auto;
  padding: 0 2rem;
}

.left-right {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.left-right .align-center {
  order: -1;
}

@media (min-width: 768px) {
    .left-right {
      flex-direction: row;
    }

    .left-right .align-center {
      order: 0;
    }

    .img-left .align-center {
      order: -1;
    }

    .img-right .align-center {
      order: 1;
    }
}

